--- a/templates/base.html
+++ b/templates/base.html
@@ -20,13 +20,18 @@
         </nav>
 
         <div class="col-md-12 text-center">
-    {% if current_user.is_anonymous %}
-      <a class="btn btn-outline-primary" href="{{ url_for('auth.login') }}">Войти</a>
-    {% else %}
-      <a class="btn btn-outline-danger" href="{{ url_for('auth.logout') }}">Выход</a>
-    {% endif %}
-
-</div>
+            {% if current_user.is_anonymous %}
+                <a class="btn btn-outline-primary" href="{{ url_for('auth.login') }}">Войти</a>
+            {% else %}
+                <a class="btn btn-outline-danger" href="{{ url_for('auth.logout') }}">Выход</a>
+            {% endif %}
+            {% for post in posts %}
+                <h2>{{ post.title }}</h2>
+                <p>Автор: {{ post.author_nickname }}</p>
+                <p>{{ post.content }}</p>
+                <a href="{{ url_for('post_detail', post_id=post.id) }}">Читать далее</a>
+            {% endfor %}
+        </div>
     </header>
 
     <main>
